--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="grey9c">#9c9998</color>
+    <color name="greyEd">#ededed</color>
 </resources>
