Create ImageViewExtensions.kt for loading images with Glide and drawables. Create TextViewExtensions.kt for loadingStrings from stringRes. Create GamesAdapter.kt.

--- a/app/src/main/res/layout/activity_games_list.xml
+++ b/app/src/main/res/layout/activity_games_list.xml
@@ -8,6 +8,7 @@
     android:background="@color/greyEd">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/games_recycler"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
