--- a/app/src/main/res/layout/release_genre_details.xml
+++ b/app/src/main/res/layout/release_genre_details.xml
@@ -5,6 +5,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <View
+        android:id="@+id/divider_line"
+        android:layout_width="0dp"
+        android:layout_height="0.5dp"
+        android:background="@color/grey9c"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <TextView
         android:id="@+id/genre"
         android:layout_width="wrap_content"
@@ -12,8 +21,9 @@
         android:textSize="9sp"
         android:fontFamily="@font/helvetica_neue"
         android:textColor="@color/grey9c"
+        android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider_line"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="MMORPG"/>
 
