--- a/app/src/main/res/layout/item_card_game.xml
+++ b/app/src/main/res/layout/item_card_game.xml
@@ -18,8 +18,8 @@
         <ImageView
             android:id="@+id/game_image"
             android:layout_width="0dp"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop"
+            android:layout_height="225dp"
+            android:scaleType="fitXY"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:textSize="10sp"
+            android:textSize="12sp"
             android:fontFamily="@font/helvetica_neue"
             app:layout_constraintTop_toBottomOf="@id/game_title"
             app:layout_constraintStart_toStartOf="parent"
