--- a/app/src/main/res/layout/item_card_game.xml
+++ b/app/src/main/res/layout/item_card_game.xml
@@ -29,8 +29,8 @@
             android:id="@+id/game_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginEnd="35dp"
+            android:layout_marginStart="37dp"
+            android:layout_marginEnd="37dp"
             android:fontFamily="@font/helvetica_neue_bold"
             android:maxLines="1"
             android:textSize="20sp"
@@ -46,7 +46,7 @@
             app:layout_constraintTop_toTopOf="@id/game_title"
             app:layout_constraintBottom_toBottomOf="@id/game_title"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="5dp"
+            android:layout_marginEnd="10dp"
             tools:src="@drawable/ic_console"/>
 
         <include
@@ -65,7 +65,9 @@
             android:id="@+id/game_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:textSize="12sp"
             android:fontFamily="@font/helvetica_neue"
             app:layout_constraintTop_toBottomOf="@id/game_title"
