--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -31,5 +31,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_game_image"/>
 
+    <ImageView
+        android:id="@+id/platform_image"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/images_recycler"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:src="@drawable/ic_windows"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
